--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI = mongodb+srv://santiagomontenegrow:MondongoLupin@clusterl.3oyijuu.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URI = mongodb+srv://santiagomontenegrow:MondongoLupin@clusterl.3oyijuu.mongodb.net/WallTentDataBase
