--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI = mongodb+srv://santiagomontenegrow:MondongoLupin@clusterl.3oyijuu.mongodb.net/WallTentDataBase
+MONGODB_URI = mongodb+srv://santiagopulidog:monsp104@clusterl.3oyijuu.mongodb.net/WallTentDataBase
